# ChangeLog for media-libs/alsa-lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.291 2009/09/05 18:52:06 ranger Exp $

  05 Sep 2009; Brent Baude <ranger@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  Marking alsa-lib-1.0.20-r1 ppc64 stable for bug 280464

*alsa-lib-1.0.21 (31 Aug 2009)

  31 Aug 2009; <chainsaw@gentoo.org> +alsa-lib-1.0.21.ebuild:
  Version bump, removes several deprecated functions. Besides that, mostly
  bug fixes and new drivers.

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org>
  alsa-lib-1.0.20-r1.ebuild:
  Stable on alpha, bug #280464

  17 Aug 2009; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  Stable for HPPA (bug #280464).

  14 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  alsa-lib-1.0.20-r1.ebuild:
  stable x86, bug 280464

  09 Aug 2009; nixnut <nixnut@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  ppc stable #280464

  05 Aug 2009; <chainsaw@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  Early stable on AMD64 as requested by Samuli Suominen
  <ssuominen@gentoo.org> in bug #280464. Tested with a Realtek ALC269 on a
  Fujitsu-Siemens Lifebook S6420 with USE="python -alisp -debug -doc".

  01 Aug 2009; Steve Dibb <beandog@gentoo.org> alsa-lib-1.0.17a.ebuild,
  alsa-lib-1.0.19.ebuild, -alsa-lib-1.0.20.ebuild,
  alsa-lib-1.0.20-r1.ebuild:
  Drop midi use flag, bug 272659

  02 Jul 2009; Markus Meier <maekke@gentoo.org> alsa-lib-1.0.19.ebuild:
  amd64 stable, bug #272682

  02 Jul 2009; Brent Baude <ranger@gentoo.org> alsa-lib-1.0.19.ebuild:
  Marking alsa-lib-1.0.19 ppc64 stable for bug 272682

  02 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  alsa-lib-1.0.19.ebuild:
  stable x86, bug 272682

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  alsa-lib-1.0.19.ebuild:
  Stable on alpha, bug #272682

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.19.ebuild:
  Stable for HPPA (bug #272682).
