@@ -2,9 +2,11 @@ DIST alsa-lib-1.0.17a.tar.bz2 789428 RMD160 ff4c8478bbc421225628419e4ffcb10be47c
 DIST alsa-lib-1.0.19.tar.bz2 792682 RMD160 0ba7f8b1bd311fd9adc7cb1f80e2d3b23b1b303a SHA1 d1e320cad0ef902db2417de1c3520fc19af0af32 SHA256 32ee26d93a25963fdc49b4b5ccd014749d675e33f419022c646a61c31a4a2886
 DIST alsa-lib-1.0.20.tar.bz2 794728 RMD160 8e0b48367abdd9d5746d2dc537014b1449e65e05 SHA1 0e6acce4301a4b3924e268a78e8c979a55cc8f88 SHA256 15f8d0eef1da10c62136107e7b585bc8beb9c9e9b7ad177654097f8c15e57a63
 DIST alsa-lib-1.0.21.tar.bz2 808252 RMD160 b92732e73d5d2934d3ab627d62a2439519446a61 SHA1 cac69df85692ac407c4c80e7ca7a016ee8f35918 SHA256 ab6c40e4f694284d249841075458bbef77ffa0d06561fd847548c28082a79925
+DIST alsa-lib-1.0.21a.tar.bz2 808475 RMD160 38e615c25a93f4529f06e079584d379439ed9600 SHA1 49032964d22404455f3173629f271324bd8af211 SHA256 a6ce09afadc5428b09667cef32f7eba4ce0ea45aca27819edbe188e076d70074
 EBUILD alsa-lib-1.0.17a.ebuild 2796 RMD160 95da439eefac8ca9a8f9f29f5c55793557b21bb1 SHA1 afc1a897dcaded3be2cdb6f9685edd8b67d5817d SHA256 30344d72950ef2e0f63ee597b4de591359320a477396f3383bf7f87078365628
 EBUILD alsa-lib-1.0.19.ebuild 2795 RMD160 bdb49c514c49820f32912adbec49e7c1ffa72514 SHA1 4565d6a61a5147270cb5dca43f8f46ba7c297424 SHA256 ce2776cd7672a7790a7baec39919f99c1a088289a6fb2d2d09dd29bf2c544811
-EBUILD alsa-lib-1.0.20-r1.ebuild 2797 RMD160 27b385da1d70b49b4e1cfad6fd1bf7589275b9db SHA1 6b99d3fcf77c754780fa4cc22962f7028c27107b SHA256 37e5b8d34547765b5fc2c85564aa5d13c1960ca1203baccb66aa40607ef29e62
+EBUILD alsa-lib-1.0.20-r1.ebuild 2797 RMD160 dbdd67666f2d2d96834778178ee6876f1985fbd8 SHA1 ee68c0721a3b17beea8061268d8f7ddecbb327b9 SHA256 b0cd0607442fcfb52684af8030fc6c92363c1cd3370a3c7838f321dbfa110205
 EBUILD alsa-lib-1.0.21.ebuild 2496 RMD160 2e6edb8dd682de17cbd0c5d1a2453b501e9c5102 SHA1 e82fe4afcbfd3346aac6da2357b63a4cda0a7ef6 SHA256 eb4c3ae312007b42df70cd55d82b2dcc59619bd5b6cde8a80c9910a3884e7b9c
-MISC ChangeLog 43059 RMD160 0ca541344648a0a798d0314e0a8ee4f96553b80e SHA1 8bc4efe3636b919d373e029aa3be1a3e4aa92a74 SHA256 4b190d7bbd9d5f87ce987e5ac347eaea8564cd7d1b3fc8b8154cf5c2e41bcaaf
+EBUILD alsa-lib-1.0.21a.ebuild 2509 RMD160 ef4cb9deff4238d628955c6544443384708fcee0 SHA1 c59c5bcfbbcb94def8404e013d5b7abc586433b1 SHA256 a80106ad0091645e6ce9c79bea87e29f390e0d91c08a33c2f4ed191669cf8b9d
+MISC ChangeLog 43296 RMD160 ad89e9a8a33b3faa9925b7d30d53b078da188de5 SHA1 f6f2b48b3a76814fd858dae3e0edc56a76740d26 SHA256 a53dccb5b3b9211ffee2dc397ad127ef5fbc170c3cc173688a9f057a02f2220f
 MISC metadata.xml 349 RMD160 d53ee4e7e914ec155222ead9a6118ee8907b775a SHA1 20344a00a6f51ddc0dc4b8e0b09c8a21ba91cc4a SHA256 68b0f168985d3b03a0997eb9f9338662d1584dc7fe7ea35ae8f7564e5e20c2e3
