@@ -1,6 +1,15 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.291 2009/09/05 18:52:06 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.293 2009/09/19 13:48:42 maekke Exp $
+
+  19 Sep 2009; Markus Meier <maekke@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
+  arm stable, bug #280464
+
+*alsa-lib-1.0.21a (13 Sep 2009)
+
+  13 Sep 2009; Peter Alfredsen <loki_val@gentoo.org>
+  +alsa-lib-1.0.21a.ebuild:
+  Bump. Bug 284716.
 
   05 Sep 2009; Brent Baude <ranger@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
   Marking alsa-lib-1.0.20-r1 ppc64 stable for bug 280464
